--- a/CS_496/assignment4/app/src/main/res/values/strings.xml
+++ b/CS_496/assignment4/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CS 496 Android UI</string>
+    <string name="app_name">CS 496 Android UI - Jeremy Prater</string>
     <string name="activity1">Launch Activity 1</string>
     <string name="activity2">Launch Activity 2</string>
     <string name="activity3">Launch Activity 3</string>
