- CS 496 - Assignment 5 - Location/SQLite

--- a/CS_496/Geotagger/app/src/main/res/values/strings.xml
+++ b/CS_496/Geotagger/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Geotagger</string>
+    <string name="app_name">Geotagger - CS 496 - Jeremy Prater</string>
+    <string name="latText">Latitude:</string>
+    <string name="longText">Longitude:</string>
+    <string name="addGeoMsg">Add Geo Message</string>
+    <string name="clearGeoMsg">Clear Messages</string>
 </resources>
