--- a/CS_496/CoolPix/android/app/src/main/res/values/strings.xml
+++ b/CS_496/CoolPix/android/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="refresh">Refresh</string>
     <string name="newpost">Add Image</string>
     <string name="signout">Sign out</string>
+    <string name="post_liked">Like Post</string>
 </resources>
