--- a/CS_496/CoolPix/android/app/src/main/res/values/strings.xml
+++ b/CS_496/CoolPix/android/app/src/main/res/values/strings.xml
@@ -6,4 +6,20 @@
     <string name="newpost">Add Image</string>
     <string name="signout">Sign out</string>
     <string name="post_liked">Like Post</string>
+    <string name="picture">Picture</string>
+    <string name="description_info">Info</string>
+    <string name="request_permission">This sample needs camera permission.</string>
+    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
+    <string name="info">Info</string>
+    <string name="intro_message">
+        <![CDATA[
+
+
+            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
+            you can display camera preview and take pictures.
+
+
+        ]]>
+    </string>
+
 </resources>
